--- a/Foodforyou.html
+++ b/Foodforyou.html
@@ -14,7 +14,7 @@
 
     <section>Upcoming Event(slider)</section>
 
-    <section>Most Popular Pasta</section>
+    <section>Most Popular Pasta diksha </section>
 
     <section>Book you table</section>
 
